@@ -26,6 +26,9 @@
    - stevesk@cvs.openbsd.org 2001/07/23 18:14:58
      [auth2.c auth-rsa.c]
      use %lu; ok markus@
+   - stevesk@cvs.openbsd.org 2001/07/23 18:21:46
+     [xmalloc.c]
+     no zero size xstrdup() error; ok markus@
 
 20010803
  - (djm) Fix interrupted read in entropy gatherer. Spotted by markus@ on
@@ -6136,4 +6139,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1433 2001/08/06 21:01:49 mouring Exp $
+$Id: ChangeLog,v 1.1434 2001/08/06 21:03:23 mouring Exp $
